--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img src="img/logo.svg" style="width: 180px; margin-top: 10px;" />
         </a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li class="logged-in">
+          <li class="logged-in" style="display: none;">
             <a
               href="#"
               class="grey-text modal-trigger"
@@ -28,10 +28,10 @@
               >Account</a
             >
           </li>
-          <li class="logged-in">
+          <li class="logged-in" style="display: none;">
             <a href="#" class="grey-text" id="logout">Logout</a>
           </li>
-          <li class="logged-in">
+          <li class="logged-in" style="display: none;">
             <a
               href="#"
               class="grey-text modal-trigger"
@@ -39,7 +39,7 @@
               >Create Guide</a
             >
           </li>
-          <li class="logged-out">
+          <li class="logged-out" style="display: none;">
             <a
               href="#"
               class="grey-text modal-trigger"
@@ -47,7 +47,7 @@
               >Login</a
             >
           </li>
-          <li class="logged-out">
+          <li class="logged-out" style="display: none;">
             <a
               href="#"
               class="grey-text modal-trigger"
