--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
         </ul>
       </div>
     </nav>
+    <!-- ADMIN ACTIONS -->
+    <form
+      class="center-align admin-actions"
+      style="margin: 40px auto; max-width: 300px;"
+    >
+      <input type="email" placeholder="User email" id="admin-email" required />
+      <button class="btn-small yellow darken-2 z-depth-0">Make admin</button>
+    </form>
     <!-- SIGN UP MODAL -->
     <div id="modal-signup" class="modal">
       <div class="modal-content">
@@ -136,6 +144,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-functions.js"></script>
 
     <script>
       // Your web app's Firebase configuration
@@ -151,6 +160,7 @@
       // make auth amd firestore references
       const auth = firebase.auth();
       const db = firebase.firestore();
+      const functions = firebase.functions();
     </script>
 
     <!-- Compiled and minified JavaScript -->
